Material does no update when changing keyframes in dopesheet #37886

Closed
opened 2013-12-19 20:26:03 +01:00 by Fabian Hernandez · 12 comments

System Information
OS X 10.9.1

Blender Version
Broken: Blender 2.69 r60991

Short description of error
When using the rendered view (either BI or Cycles), changes made to keyframes using the Dope Sheet are usually shown in rendered view (such as changes to Location keyframes). However, changes to property keyframes such as Diffuse Colour are not reflected in rendered view.

Exact steps for others to reproduce the error

  1. Open either one of the attached files (there's a version for BI and one for Cycles)
  2. Switch camera view to rendered view
  3. Make sure you're at frame 12.
  4. In Dope Sheet, select the keyframe at frame 23 (it's a location keyframe)
  5. Move the keyframe to frame 12. Notice how the change is immediately shown in rendered view.
  6. Now select the keyframe at frame 24 (it's a diffuse colour keyframe)
  7. Move the keyframe to frame 12. Notice how the viewport re-renders, but doesn't show the change.
  8. Go to the next frame and back to frame 12 again to finally see the change shown in rendered view

renderview-not-updated-on-keyframe-move-cycles.blend

renderview-not-updated-on-keyframe-move-bi.blend

**System Information** OS X 10.9.1 **Blender Version** Broken: Blender 2.69 r60991 **Short description of error** When using the rendered view (either BI or Cycles), changes made to keyframes using the Dope Sheet are usually shown in rendered view (such as changes to Location keyframes). However, changes to property keyframes such as Diffuse Colour are not reflected in rendered view. **Exact steps for others to reproduce the error** 1. Open either one of the attached files (there's a version for BI and one for Cycles) 2. Switch camera view to rendered view 3. Make sure you're at frame 12. 4. In Dope Sheet, select the keyframe at frame 23 (it's a location keyframe) 5. Move the keyframe to frame 12. Notice how the change is immediately shown in rendered view. 6. Now select the keyframe at frame 24 (it's a diffuse colour keyframe) 7. Move the keyframe to frame 12. Notice how the viewport re-renders, but doesn't show the change. 8. Go to the next frame and back to frame 12 again to finally see the change shown in rendered view [renderview-not-updated-on-keyframe-move-cycles.blend](https://archive.blender.org/developer/F46690/renderview-not-updated-on-keyframe-move-cycles.blend) [renderview-not-updated-on-keyframe-move-bi.blend](https://archive.blender.org/developer/F46691/renderview-not-updated-on-keyframe-move-bi.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FabianHernandez

Added subscriber: @FabianHernandez
Brecht Van Lommel changed title from Rendered view does not show changes made to keyframes related to properties to Material does no update when changing keyframes in dopesheet 2013-12-20 01:44:17 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

I can redo the problem, but it seems unrelated to rendered draw type, other draw types and the properties editor don't update either. This means it's a bug in the animation itself, possibly a dependency graph limitation, need to investigate more to find that out.

I can redo the problem, but it seems unrelated to rendered draw type, other draw types and the properties editor don't update either. This means it's a bug in the animation itself, possibly a dependency graph limitation, need to investigate more to find that out.
Sergey Sharybin self-assigned this 2013-12-23 15:45:10 +01:00

I'll try to look into this.

I'll try to look into this.

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Developer note.

@brecht, looked into the issue and it's indeed limitation of current DAG and animation system.

What happens is changing keyframes in dopesheet or modifying fcurves in curve editor tags material for update which triggers re-render. However, animation system doesn't re-evaluate fcurves for material. Such a re-evaluation only happens when changing the frames.

What is needed to solve this bug is a way to tag materials as "need to be re-evaluated" and handle such an update in scene update function. Also materials need to become a part of DAG (that's easy tho).

I might hack this in by adding "recalc" field to ID itself (or maybe just to material for now?) and make it so scene_update will dela with materials and DAG_id_tag_update called for material will set that recalc flag.

This doesn't sound so much complicated, however this might conflict with what @JoshuaLeung was working on in his GSoC project.

So what would be the plan here?

Developer note. @brecht, looked into the issue and it's indeed limitation of current DAG and animation system. What happens is changing keyframes in dopesheet or modifying fcurves in curve editor tags material for update which triggers re-render. However, animation system doesn't re-evaluate fcurves for material. Such a re-evaluation only happens when changing the frames. What is needed to solve this bug is a way to tag materials as "need to be re-evaluated" and handle such an update in scene update function. Also materials need to become a part of DAG (that's easy tho). I might hack this in by adding "recalc" field to ID itself (or maybe just to material for now?) and make it so scene_update will dela with materials and DAG_id_tag_update called for material will set that recalc flag. This doesn't sound so much complicated, however this might conflict with what @JoshuaLeung was working on in his GSoC project. So what would be the plan here?

Previously we closed such bug reports and moved them to the to do, but if you want to add some solution for this it's fine with me, if it doesn't conflict much with @JoshuaLeung's work.

We have a LIB_ID_RECALC flag already for Cycles to detect updates, that could probably be used.

Previously we closed such bug reports and moved them to the to do, but if you want to add some solution for this it's fine with me, if it doesn't conflict much with @JoshuaLeung's work. We have a LIB_ID_RECALC flag already for Cycles to detect updates, that could probably be used.

This issue was referenced by blender/blender-addons-contrib@08981f3a91

This issue was referenced by blender/blender-addons-contrib@08981f3a91a687efa8d28d308d6033e5a9e68b1f

This issue was referenced by 08981f3a91

This issue was referenced by 08981f3a91a687efa8d28d308d6033e5a9e68b1f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 08981f3a91.

Closed by commit 08981f3a91.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37886
No description provided.